--- a/comparisons/table.html
+++ b/comparisons/table.html
@@ -412,23 +412,17 @@
             dataStorage: "Australia",
             freeMembership: false,
             freeTrial: "30 days",
-            pmsIntegration: "Copy+Paste typical, if needed",
+            pmsIntegration: "Works with ANY practice management system through copy-paste or document upload-download.",
             uniqueFeatures: {
               sections: [
                 {
                   category: "Advanced Transcription",
                   items: [
-                    "Transcription service with speaker recognition included",
-                  ],
-                },
-                {
-                  category: "Specialized Healthcare AI",
-                  items: [
-                    "AI models customized for over 200 healthcare and mental health use cases",
-                    "Increased use of evidence-based output relative to other models like ChatGPT",
-                    "Stay up to date with the latest high-end AI models with only one monthly subscription and APP compliance",
-                    "Reduced content filters when dealing with psychology topics around violence and sexual abuse",
-                    "Searchable chat history",
+                    "Multi-speaker recognition for higher quality documentation",
+                    "Generate documentation via voice, written notes, or a combination of both.",
+                    "Can match your voice, tone, and style when examples are used",
+                    "Reduced content filters for sensitive clinical topics such as violence, abuse or suicidality",
+                    "Powered by the latest AI models from OpenAI, Google and Anthropic",
                   ],
                 },
               ],
@@ -436,33 +430,31 @@
             coreFeatures: {
               sections: [
                 {
-                  category: "AI Assistant",
+                  category: "AI Scribe",
                   items: [
-                    "AI assistant with the ease of use of ChatGPT but with AI models and features tailored for the needs of Psychologists",
-                  ],
-                },
-                {
-                  category: "Privacy & AI Models",
-                  items: [
-                    "The tool allows for use with personal information (APP/Privacy Act compliant), and automatic selection of the leading AI models (e.g., OpenAI GPT-4, Google Gemini, Anthropic Claude) based on what is being asked of it",
+                    "Unlimited sessions, up to 4 hours long",
+                    "Record sessions live or upload prerecorded audio",
+                    "Record in-person or virtual sessions",
+                    "99.9% Uptime Guarantee",
+                    "AI assistant with the ease of use of ChatGPT",
                   ],
                 },
               ],
             },
             pricing: {
               prices: [
-                "$20/mo - Professional: High quality psychology-tailored AI models, unlimited prompts, input documents up to 10,000 words each",
-                "$45/mo - Professional Plus: Enhanced features such as greater memory that supports documents up to 35,000 words each, cloud synchronizing saved prompts across multiple devices, and processing of images and graphics",
-                "$60/mo - Enterprise: Features designed for large enterprises, such as customizable security policies and Single-Sign-On",
+                "AUD $30 per user per month for unlimited use of all AI scribe features.",
+                "No per-session costs.",
+                "Australian pricing page:  " + "<a style='text-decoration: underline;' href='https://bastiongpt.com/australia'>https://bastiongpt.com/australia</a>",
               ],
             },
             telehealth: true,
             headphonesCompatible: true,
-            mobileCompatible: false,
+            mobileCompatible: true,
             multipleNotes: true,
             aiTrainableOverTime: true,
             languagesSupported: [
-              "English primarily supported, but content can be generated in many other language.",
+              "16 languages supported, including specific models for US English and Australian English",
             ],
           },
 
