updated NovoNote details

--- a/comparisons/table.html
+++ b/comparisons/table.html
@@ -727,7 +727,7 @@
             appCompliance: true,
             dataStorage: "Australia",
             freeMembership: true,
-            freeTrial: "3 months",
+            freeTrial: "15 day trial",
             pmsIntegration:
               "Copy and paste into practice management software. Integration with NovoPsych",
             uniqueFeatures: {
@@ -736,9 +736,11 @@
                   category: "Designed for Mental Health",
                   items: [
                     "Specifically designed for mental health practitioners by the team at NovoPsych",
-                    "Multi session reports (coming in January 2025)",
-                    "Integration of psychometric results of NovoPsych (coming in January 2025)",
-                    "Template library designed by a team of psychologists",
+                    "Multi session reports (combine multiple sessions)",
+                    "Psychometric integration (reports blend therapy content + psychometrics)",
+                    "Large library of report templates",
+                    "Customisable templates",
+                    "Context editing after the fact (add context later and regenerate)",
                   ],
                 },
               ],
@@ -768,17 +770,14 @@
             },
             pricing: {
               prices: [
+               
+                "$30, $60, $99, Depending on client load.",
                 "All NovoNote plans include access to NovoPsych Psychometrics",
-                "Free Tier: 30 notes a month",
-                "Pro: $25 - 50 notes a month",
-                "Pro Plus: $60 - 100 notes per month",
-                "Platinum: $99 - Unlimited usage",
-                "Practice Plans starting from $50 per clinician per month",
               ],
             },
             telehealth: true,
             headphonesCompatible: "Not sure",
-            mobileCompatible: false,
+            mobileCompatible: "Accessible on any device via your web browser (desktop, tablet, mobile)",
             multipleNotes: true,
             aiTrainableOverTime: true,
             languagesSupported: "Primarily English",
