organisation-logos-added

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ subnav:
       Leading AI training and thought leadership across Australia's top
       psychology organizations
     </p>
-    <div class="two-col-grid">
+    <div class="two-col-grid" style="margin-bottom: 2rem;">
       <article class="card">
         <h3 class="card-title">Major Conference Presentations</h3>
         <div>
@@ -115,14 +115,6 @@ subnav:
             <h4 class="event-title">Australian Psychological Society (APS)</h4>
             <p class="event-desc">
               College of Clinical Psychologists - "Getting Started with AI"
-            </p>
-          </div>
-          <div class="event-item">
-            <h4 class="event-title">
-              Australian Association of Psychologists Inc. (AAPi)
-            </h4>
-            <p class="event-desc">
-              "Getting Started with AI for Psychologists" - Live Webinar
             </p>
           </div>
           <div class="event-item">
@@ -157,6 +149,33 @@ subnav:
         </div>
       </article>
     </div>
+    <article class="card event-orgnanisations">
+      <h3 class="card-title">Major Organisation Presentations</h3>
+      <div>
+        <div class="event-container">
+          <div class="event-item">
+            <h4 class="event-title">
+              Australian Association of Psychologists Inc. (AAPi)
+            </h4>
+            <p class="event-desc">
+              "Getting Started with AI for Psychologists" - Live Webinar
+            </p>
+          </div>
+          <img src="../assets/images/speaker-events/AAPi.png" width="250" alt="AAPi Logo">
+        </div>
+        <div class="event-container">
+          <div class="event-item">
+            <h4 class="event-title">
+              Private Practice Success
+            </h4>
+            <p class="event-desc">
+              "AI Skills for Clinicians"
+            </p>
+          </div>
+          <img src="../assets/images/speaker-events/PrivatePracticeSuccess.png" width="250" alt="Private Practice Success Logo">
+        </div>
+      </div>
+    </article>
   </div>
 </section>
 
