patientNotes-content-updated

--- a/comparisons/table.html
+++ b/comparisons/table.html
@@ -470,7 +470,7 @@
             dataStorage: "Australia",
             freeMembership: false,
             freeTrial: "14 days",
-            pmsIntegration: "Cliniko and Nookal",
+            pmsIntegration: "Cliniko, Nookal, Halaxy",
             uniqueFeatures: {
               sections: [
                 {
@@ -481,6 +481,7 @@
                     "Speech-to-text editing",
                     "Prompt creation tool",
                     "Extensive prompt library",
+                    "We now support offline recording with audio upload, as well as an Android offline recording function.",
                   ],
                 },
               ],
@@ -510,33 +511,33 @@
               ],
             },
             telehealth: true,
-            headphonesCompatible: false,
-            mobileCompatible: true,
+            headphonesCompatible: true,
+            mobileCompatible: "Yes, Android and iOS versions.",
             multipleNotes: true,
             aiTrainableOverTime:
               "We have a prompt review tool which we have found better than training.",
             languagesSupported: {
               languages: [
+                "Arabic",
+                "Azerbaijani",
+                "Bosnian",
                 "Bulgarian",
+                "Cantonese",
                 "Catalan",
                 "Chinese (Mandarin, Simplified)",
-                "Chinese (Mandarin, Traditional)",
-                "Chinese (Cantonese, Traditional)",
+                "Croatian",
                 "Czech",
                 "Danish",
                 "Dutch",
-                "English Australian",
-                "English British",
-                "English Indian",
-                "English New Zealand",
-                "English U.S.",
+                "English",
+                "English (US)",
+                "English (Australia)",
+                "English (UK)",
                 "Estonian",
+                "Filipino",
                 "Finnish",
-                "Flemish",
-                "French Canadian",
-                "French Swiss",
                 "French",
-                "German Swiss",
+                "Galician",
                 "German",
                 "Greek",
                 "Hindi",
@@ -545,13 +546,11 @@
                 "Italian",
                 "Japanese",
                 "Korean",
-                "Latvian",
-                "Lithuanian",
+                "Macedonian",
                 "Malay",
-                "Spanish",
-                "Norwegian",
+                "Māori",
+                "Norwegian Bokmål",
                 "Polish",
-                "Portuguese Brazilian",
                 "Portuguese",
                 "Romanian",
                 "Russian",
@@ -561,11 +560,11 @@
                 "Thai",
                 "Turkish",
                 "Ukrainian",
+                "Urdu",
                 "Vietnamese",
               ],
             },
           },
-
           {
             id: 4,
             name: "Heidi Health",
