minor-styling-fix

--- a/calculator/index.html
+++ b/calculator/index.html
@@ -3,7 +3,7 @@ layout: default
 title: AI Scribe Savings Calculator
 ---
 
-<div class="container two-col-grid page-container">
+<div class="container two-col-grid">
         <section class="left-panel">
             <header class="text-center mb-8">
                 <h1 class="section-title">AI Scribe <span class="section-title-accent">Calculator</span></h1>
