--- a/calculator/index.html
+++ b/calculator/index.html
@@ -32,6 +32,8 @@ title: AI Scribe Savings Calculator
                     <button type="submit" class="btn w-100 justify-center">Calculate Savings</button>
                 </form>
             </section>
+
+            <section class="calc-footer mt-8">For more information on AI Scribes see the <br><a href="../comparisons/" style="text-decoration: underline;">AI Scribe Comparison Table</a></section>
         </section>
 
         <aside class="right-panel">
