removed lyrebird article and changed novoNote prov psych image"

--- a/provisional-psychologists/index.html
+++ b/provisional-psychologists/index.html
@@ -27,7 +27,7 @@ description: Carefully curated AI scribe tools to help provisional psychologists
         "18 months at no cost for provisional psychologists",
       ],
       link: "https://novopsych.com/provisional-psychologist-hub/",
-      image: "../assets/images/affiliate/novoNote-affiliate.png",
+      image: "../assets/images/affiliate/novoNote-affiliate.jpg",
     },
     {
       name: "Practaluma",
@@ -53,6 +53,7 @@ description: Carefully curated AI scribe tools to help provisional psychologists
         src="${company.image}"
         alt="${company.name} Logo"
         class="max-w-50"
+        style="border-radius: 20px;"
       />
       <article class="card card-alt card-bordered prov-psych-card">
         <div class="mb-8">
